# siiiw

./: README.md
assg1/: .gitignore  Cargo.toml  README.md
assg1/report/: report.tex
assg1/report/img/: 01_000.pgf  01_001.pgf  01_005.pgf
assg1/scripts/: plot.py
assg1/src/: ea.rs  individual.rs  logger.rs  main.rs  problem.rs
assg1/src/sf/: ea.rs  mod.rs  random.rs
assg1/src/tsp/: dm.rs  logs.rs  mod.rs  naive.rs  ops.rs  parser.rs  reader.rs
assg2/: .gitignore  Cargo.toml  README.md
assg2/report/: report.tex
assg2/src/: cli.rs  main.rs
assg2/src/csp/: mod.rs  solvers.rs
assg2/src/jolka/: mod.rs  parser.rs
assg2/src/sudoku/: mod.rs  parser.rs
assg3/: .gitignore  0.bootstrap.js  1.bootstrap.js  Cargo.toml  README.md  bootstrap.js
assg3/src/: lib.rs
assg3/src/connectfour/: eval.rs  mod.rs
assg3/src/game/: algorithms.rs  mod.rs
assg3/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
assg3/www/src/: gameManager.js  ui.js  view.js
assg4/: .gitignore  README.md  main.kf
assg4/scripts/: arffify.py  fetch.sh
assg4/src/: main.py
