[package]
name = "assg3"
description = "Zero-sum game solving algorithms"
version = "0.1.0"
authors = ["Karol Belina <karolbelina@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
snafu = "0.6.3"
log = "0.4.8"
env_logger = "0.7.1"
js-sys = "0.3.32"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
