[package]
name = "assg3"
description = "Zero-sum game solving algorithms"
version = "0.1.0"
authors = ["Karol Belina <karolbelina@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.10"
console_error_panic_hook = { version = "0.1.1", optional = true }
js-sys = "0.3.32"
rand = { version = "0.7", features = ["wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
